Closed
Bug 394528
Opened 18 years ago
Closed 18 years ago
nsSSLThread leaks load groups
Categories
(Core :: Security: PSM, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta1
People
(Reporter: dbaron, Assigned: KaiE)
References
()
Details
(Keywords: memory-leak)
Attachments
(1 file)
2.48 KB,
patch
|
KaiE
:
review+
bzbarsky
:
superreview+
benjamin
:
approval1.9+
|
Details | Diff | Splinter Review |
Robert Sayre found this through some automated testing of random URLs from delicious.
Steps to reproduce:
export XPCOM_MEM_LEAK_LOG=leak.log
./firefox http://www.muddlepuddle.co.uk/
Actual results: leak 1 nsLoadGroup
Expected results: no nsLoadGroup leaked
I suspect the problem is that nsHTTPDownloadEvent::Run is hitting the failure case that calls nsSSLThread::rememberPendingHTTPRequest(nsnull). The leak is fixed by the one-line patch to nsSSLThread::rememberPendingHTTPRequest to release the old value, but I have a better patch to convert mPendingHTTPRequest to an nsCOMPtr.
Flags: blocking1.9?
Reporter | ||
Comment 1•18 years ago
|
||
Attachment #279190 -
Flags: review?(kengert)
Reporter | ||
Comment 2•18 years ago
|
||
Screencast of how I found this is debugging session 6 at http://people.mozilla.com/~dbaron/leak-screencasts/
Assignee | ||
Comment 3•18 years ago
|
||
Comment on attachment 279190 [details] [diff] [review]
patch
Great, thanks David!
r=kengert
Attachment #279190 -
Flags: review?(kengert) → review+
Reporter | ||
Updated•18 years ago
|
Attachment #279190 -
Flags: superreview?(bzbarsky)
Reporter | ||
Updated•18 years ago
|
Attachment #279190 -
Flags: superreview?(bzbarsky) → superreview?(cbiesinger)
![]() |
||
Comment 4•18 years ago
|
||
Comment on attachment 279190 [details] [diff] [review]
patch
sr=bzbarsky
Attachment #279190 -
Flags: superreview?(cbiesinger) → superreview+
Reporter | ||
Updated•18 years ago
|
Attachment #279190 -
Flags: approval1.9?
Updated•18 years ago
|
Attachment #279190 -
Flags: approval1.9? → approval1.9+
Reporter | ||
Comment 5•18 years ago
|
||
Fix checked in to trunk.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M9
You need to log in
before you can comment on or make changes to this bug.
Description
•