Fix leak of mPendingHTTPRequest in nsSSLThread::rememberPendingHTTPRequest by converting it to an nsCOMPtr.  b=394528  r=kengert  sr=bzbarsky  a=bsmedberg